cmake_minimum_required(VERSION 3.2)

project(listings)

set(CMAKE_CXX_STANDARD 17)

include(config_modules_cmake/config.cmake)

add_subdirectory(list1)
add_subdirectory(list3)
add_subdirectory(list4)
add_subdirectory(list5)
add_subdirectory(list6)
add_subdirectory(list8)
add_subdirectory(list9)
add_subdirectory(list10)
add_subdirectory(list11)
add_subdirectory(list12)
add_subdirectory(list13)
add_subdirectory(list14)
add_subdirectory(list2_1)
add_subdirectory(list2_2)
